scripts/nullaway/nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8.txt
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/PoolThreadTaskExecutor.java:18: error: [NullAway] parameter task is @NonNull, but parameter in superclass method daoo.ioc.TaskExecutor.execute(daoo.ioc.Task) is @Nullable
    public void execute(@NotNull Task task) {
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/DaooTaskServer.java:15: error: [NullAway] parameter executor is @NonNull, but parameter in superclass method daoo.ioc.TaskServer.start(daoo.ioc.TaskExecutor,int) is @Nullable
    public void start(@NotNull TaskExecutor executor, int port) {
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/PoolThreadTaskExecutor2.java:32: error: [NullAway] parameter task is @NonNull, but parameter in superclass method daoo.ioc.TaskExecutor.execute(daoo.ioc.Task) is @Nullable
    public void execute(@NotNull Task task) {
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/NewThreadTaskExecutor.java:10: error: [NullAway] parameter task is @NonNull, but parameter in superclass method daoo.ioc.TaskExecutor.execute(daoo.ioc.Task) is @Nullable
    public void execute(@NotNull Task task) {
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Value.java:16: error: [NullAway] initializer method does not guarantee @NonNull field value (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Value() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Value.java:28: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.Statement.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQuery.java:42: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.visitor.Visitable.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(QueryVisitor visitor) {
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Table.java:61: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.visitor.Visitable.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Select.java:17: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.visitor.Visitable.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/From.java:17: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.visitor.Visitable.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Where.java:16: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.visitor.Visitable.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/GroupBy.java:17: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.visitor.Visitable.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/OrderBy.java:17: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.visitor.Visitable.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Limit.java:15: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.visitor.Visitable.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Offset.java:15: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.visitor.Visitable.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/BinaryCondition.java:40: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.Statement.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/JsonVisitor.java:13: error: [NullAway] initializer method does not guarantee @NonNull field query (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public JsonVisitor() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/MainTp1.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/UnitaryCondition.java:40: error: [NullAway] parameter visitor is @NonNull, but parameter in superclass method tp1.Statement.accept(tp1.visitor.QueryVisitor) is @Nullable
    public void accept(@NotNull QueryVisitor visitor) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoder.java:20: error: [NullAway] method returns @Nullable, but superclass method daoo.ioc.MsgEncoder.encode(java.lang.String) returns @NonNull
    public byte[] encode(String msg) {
                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoder.java:37: error: [NullAway] parameter code is @NonNull, but parameter in superclass method daoo.ioc.MsgEncoder.decode(byte[]) is @Nullable
    public String decode(byte[] code) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoder.java:52: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoder.java:59: error: [NullAway] passing @Nullable parameter 'encode' where @NonNull is required
        System.out.println("decode = " + c.decode(encode));
                                                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/ReverseEncoder.java:15: error: [NullAway] parameter msg is @NonNull, but parameter in superclass method daoo.ioc.MsgEncoder.encode(java.lang.String) is @Nullable
    public byte[] encode(String msg) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/ReverseEncoder.java:20: error: [NullAway] parameter code is @NonNull, but parameter in superclass method daoo.ioc.MsgEncoder.decode(byte[]) is @Nullable
    public String decode(byte[] code) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/PlainEncoder.java:15: error: [NullAway] parameter msg is @NonNull, but parameter in superclass method daoo.ioc.MsgEncoder.encode(java.lang.String) is @Nullable
    public byte[] encode(String msg) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/PlainEncoder.java:20: error: [NullAway] parameter code is @NonNull, but parameter in superclass method daoo.ioc.MsgEncoder.decode(byte[]) is @Nullable
    public String decode(byte[] code) {
                                ^
    (see http://t.uber.com/nullaway )
Note: ../nullgtn/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/JsonVisitor.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
